tests/negative/test_fnc_redef_of_variad.orb
fnc foo (x:i32)::variadic ();
fnc foo (y:i64) ();

fnc main () () {};